# MeoClaw

./: .gitignore  LICENSE  README.md  README_CN.md  bubble.html  index.html  options.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
DOC/: README.md
DOC/02-PLAN/: 2026-04-24-分身功能设计.md  Dragging动画替换.md  EnterInput状态下显示上次回复气泡.md  Hermes-SSE解析问题记录.md  Hermes-Working-Bubble修复方案.md  Hermes后端集成.md  Hermes工具调用事件丢失问题-2026-04-24.md  Hermes自动发现机制设计文档.md  Hermes自动发现机制设计文档_v2.md  MenuBarTrayIcon菜单栏图标.md  MenuBar菜单栏重启功能.md  OpenClaw 工具气泡集成.md  OpenClaw响应时间测试.md  OpenClaw本机发现机制设计文档.md  OpenClaw本机发现机制设计文档_v2.md  OpenClaw状态同步.md  OpenClaw状态检测集成.md  OpenClaw连接稳定性改进.md  Response气泡高度自适应-2026-04-17.md  Response状态与窗口位置调整.md  Shock菜单电击功能-2026-04-18.md  Working气泡文字省略-2026-04-24.md  Working状态气泡.md  [old]Hermes后端集成调试记录-2026-04-21.md  [old]吸附与半隐藏功能实现-2026-04-18.md  [old]桌宠贴边半隐藏设计草案-2026-04-17.md  [old]贴边半隐藏占位动画素材说明-2026-04-17.md  [old]贴边探出功能实现-2026-04-18.md  右键菜单Commands子菜单.md  后端切换UI与验证反馈-2026-04-20.md  后端统一路由架构.md  拖动时窗口中心跟随鼠标-2026-04-18.md  收到消息提示音功能-2026-04-21.md  桌宠大小调整.md  窗口锚点问题排查记录.md  (+7 more)
src/: App.vue  BubbleWindow.vue  bubbleEntry.ts  options.ts  windowBehavior.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/backend/: client_trait.rs  hermes_client.rs  hermes_discovery.rs  manager.rs  mod.rs  openclaw_client.rs
src-tauri/src/openclaw/: auth.rs  client.rs  discovery.rs  mod.rs  protocol.rs
src-tauri/tests/: backend_manager_tests.rs
(+213 files in other folders)
