[package]
name = "meo-claw"
version = "0.0.0"
description = "A desktop pet application"
authors = ["you"]
license = "Apache-2.0"
edition = "2021"

[lib]
name = "meo_claw_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
notify = "7"

# === OpenClaw WebSocket 客户端依赖 ===
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
hex = "0.4"
futures-util = "0.3"
tokio-tungstenite = "0.26"
base64 = "0.22"
ed25519-dalek = "2"
rand = "0.8"
dirs = "5"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
